# MaaMagicNode

./: CMakeLists.txt
.github/workflows/: build.yml
cmake/: utils.cmake
include/: MaaDef.h  MaaPlugin.h  MaaPort.h
source/: CMakeLists.txt
source/API/: MaaPlugin.cpp  MaaPluginAPI.cpp
source/MaaPluginDemo/: CMakeLists.txt
source/ResourceEventHandler/: ResourceEventHandler.cpp  ResourceEventHandler.h
source/Utils/: SingletonHolder.hpp
